--- a/app/src/main/res/menu/menu_home_screen.xml
+++ b/app/src/main/res/menu/menu_home_screen.xml
@@ -14,5 +14,6 @@
     </item>-->
     <item
         android:id="@+id/admin"
-        android:title="Admin Message"></item>
+        android:title="About Us"></item>
+
 </menu>
