--- a/app/src/main/res/layout/fragment_placement.xml
+++ b/app/src/main/res/layout/fragment_placement.xml
@@ -1,7 +1,33 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:background="@android:color/white"
+    android:orientation="vertical"
     android:layout_height="match_parent" tools:context="in.ace.pardeep.org.acev2.PlacementFragment">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/primary_dark"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Placements"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:textColor="@android:color/white"/>
+
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="30dp"
+            android:layout_height="28dp"
+            android:background="@drawable/leftnew"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="5dp"/>
+    </FrameLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,7 +50,9 @@
             <ListView
                 android:id="@+id/placementFragmentListView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+
+                >
 
             </ListView>
         </android.support.v4.widget.SwipeRefreshLayout>
@@ -32,4 +60,5 @@
     </LinearLayout>
 
 
-</FrameLayout>
+
+</LinearLayout>
